# Scripts

./: .gitattributes  LICENSE.txt  README.md
bash/: CMakeLists.txt  add_cpp_class  add_cpp_shader_class  add_source_file_to_cmake  build_tetris_simulator  buildrun_tetris  buildrun_zombie  cmake_add_class  cmake_add_shader_class  cmake_add_source  cmake_list_sources  cmake_new_mw_project  cmake_new_project  cmake_remove_source  cmake_replace_sources  create_atlas  create_new_cpp_project_cmake  create_new_mw_cpp_cmake  simulate_tetris_ai  tv_info  tv_list_latest_episodes  tv_shows_mv  ubuntuUpdate
config/: .vimrc  bash_aliases  vimrc  vscode.nemo_action
python/: cmake_create_project.py  vcpkg_list_dependencies.py
regedit/: ContextCmder-Enable.reg
